# npcrs

./: Cargo.toml  LICENSE  README.md  build.rs  build_android.sh  build_linux.sh
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: build_funcs.rs  db.rs  error.rs  init.rs  launcher.rs  lib.rs  llm_funcs.rs  main.rs  ml_funcs.rs  npc_array.rs  npc_compiler.rs  npc_sysenv.rs  plugin_setup.rs  streaming.rs
src/data/: audio.rs  image.rs  load.rs  mod.rs  text.rs  video.rs  web.rs
src/drivers/: mod.rs
src/ffi/: mod.rs
src/ft/: mod.rs  sft.rs
src/ipc/: mod.rs
src/jinx/: executor.rs  loader.rs  mod.rs
src/kernel/: boot.rs  mod.rs  syscall.rs
src/llm/: client.rs  cost.rs  mod.rs  sanitize.rs  types.rs
src/llm/providers/: anthropic.rs  mod.rs  openai_compat.rs
src/mcp/: client.rs  mod.rs
src/memory/: command_history.rs  embeddings.rs  history.rs  knowledge_graph.rs  mod.rs  processor.rs  search.rs
src/mix/: debate.rs  mod.rs
src/npc/: agents.rs  loader.rs  mod.rs  types.rs
src/npc_compiler/: agents.rs  jinx_executor.rs  jinx_loader.rs  jinx_mod_old.rs  jinx_types.rs  mod.rs  npc_loader.rs  npc_mod_old.rs  npc_types.rs  team_loader.rs  team_mod_old.rs  team_types.rs
src/process/: mod.rs
src/scheduler/: mod.rs
src/serve/: mod.rs
src/shell/: mod.rs  router.rs  state.rs
src/team/: loader.rs  mod.rs  types.rs
src/template/: mod.rs
src/tools/: mod.rs  registry.rs
src/vfs/: mod.rs
src/work/: browser.rs  desktop.rs  mod.rs  plan.rs  trigger.rs
tests/: jinx_tests.rs
