[package]
name = "npcrs"
version = "0.1.0"
edition = "2024"
description = "Rust core for the NPC system — agent kernel, jinx executor, LLM client"
license = "MIT"

[lib]
name = "npcrs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Template engine (Jinja2-compatible)
tera = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }

# Multi-provider LLM client (OpenAI, Anthropic, Gemini, Ollama, etc.)
genai = "0.5"

# Local GGUF inference (llama.cpp) — optional, requires libclang
llama-cpp-2 = { version = "0.1", optional = true }

# SSE parsing for streaming
eventsource-stream = "0.2"

# Image encoding for vision
base64 = "0.22"

# Lazy statics for TOKEN_COSTS
once_cell = "1"

# Pin projection for streams
pin-project-lite = "0.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono", "uuid"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Knowledge graph
petgraph = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# Glob for file patterns
glob = "0.3"

# UUID for conversation/message IDs
uuid = { version = "1", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Async streams (for LLM streaming)
futures = "0.3"
tokio-stream = "0.1"

# Regex for command parsing
regex = "1"
async-recursion = "1"


# Shell expansion (~ paths)
shellexpand = "3"
dirs = "6"

# For reading dirs
walkdir = "2"

# File format parsing (pure Rust)
calamine = "0.26"
zip = "2"

# URL encoding for web search
urlencoding = "2"
rustyline = "17.0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15.7"

[features]
default = ["ffi", "llamacpp"]
ffi = []
llamacpp = ["llama-cpp-2"]
python = []

[dev-dependencies]
tempfile = "3.27.0"
